src/objects/Answer__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>Click_Community_Setup__c</fullName>
        <formula>acf_Question__r.Click_Community_Setup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Setup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfSequence_No__c</fullName>
        <description>Click Loans</description>
        <label>Sequence No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acf_Answer__c</fullName>
        <description>Click Loans</description>
        <label>Answer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acf_Question__c</fullName>
        <description>Click Loans</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Answer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>acf_Related_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Related Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>RelatedAnswer</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Click Loans Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>acf_Answer__c</columns>
        <columns>NAME</columns>
        <columns>Click_Community_Setup__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>acf_Question__c</columns>
        <columns>acf_Related_Question__c</columns>
        <columns>acfSequence_No__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ans-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>